objects/CN_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Account_Source__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Recommend</fullName>
                </value>
                <value>
                    <fullName>Cold Visit</fullName>
                </value>
                <value>
                    <fullName>Public Demo</fullName>
                </value>
                <value>
                    <fullName>Brand Activity</fullName>
                </value>
                <value>
                    <fullName>Expositions</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Social Media Network</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Digital Campaign</fullName>
                </value>
                <value>
                    <fullName>Bakery China</fullName>
                </value>
                <value>
                    <fullName>CIIE</fullName>
                </value>
                <value>
                    <fullName>FHC</fullName>
                </value>
                <value>
                    <fullName>Other Trade show</fullName>
                </value>
                <value>
                    <fullName>Sponsorship Event</fullName>
                </value>
                <value>
                    <fullName>Customer Service Hotline</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Bank_Account__c</fullName>
        <label>Bank Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Brand</label>
        <referenceTo>CN_Brand__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Business_License__c</fullName>
        <label>Account Business License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Business Unit</label>
        <referenceTo>CN_Business_Unit__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Category__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAPA</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Coffee/Tea Shop</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Retailor</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>1 Star Hotel</fullName>
                    <isActive>false</isActive>
                    <label>1 Star Hotel</label>
                </value>
                <value>
                    <fullName>2 Star Hotel</fullName>
                    <isActive>false</isActive>
                    <label>2 Star Hotel</label>
                </value>
                <value>
                    <fullName>3 Star Hotel</fullName>
                    <isActive>false</isActive>
                    <label>3 Star Hotel</label>
                </value>
                <value>
                    <fullName>4 Star Hotel</fullName>
                    <isActive>false</isActive>
                    <label>4 Star Hotel</label>
                </value>
                <value>
                    <fullName>5 Star Hotel</fullName>
                    <isActive>false</isActive>
                    <label>5 Star Hotel</label>
                </value>
                <value>
                    <fullName>Access Bakery</fullName>
                    <isActive>false</isActive>
                    <label>Access Bakery</label>
                </value>
                <value>
                    <fullName>Access Coffee Shop</fullName>
                    <isActive>false</isActive>
                    <label>Access Coffee Shop</label>
                </value>
                <value>
                    <fullName>Access Ice cream</fullName>
                    <isActive>false</isActive>
                    <label>Access Ice cream</label>
                </value>
                <value>
                    <fullName>Access Pastry</fullName>
                    <isActive>false</isActive>
                    <label>Access Pastry</label>
                </value>
                <value>
                    <fullName>Access Tea Shop</fullName>
                    <isActive>false</isActive>
                    <label>Access Tea Shop</label>
                </value>
                <value>
                    <fullName>Airline</fullName>
                    <isActive>false</isActive>
                    <label>Airline</label>
                </value>
                <value>
                    <fullName>BAPA OEM</fullName>
                    <isActive>false</isActive>
                    <label>BAPA OEM</label>
                </value>
                <value>
                    <fullName>Casual Dining - Asian exclude Chinese</fullName>
                    <isActive>false</isActive>
                    <label>Casual Dining - Asian exclude Chinese</label>
                </value>
                <value>
                    <fullName>Casual Dining - Chinese</fullName>
                    <isActive>false</isActive>
                    <label>Casual Dining - Chinese</label>
                </value>
                <value>
                    <fullName>Casual Dining - Western</fullName>
                    <isActive>false</isActive>
                    <label>Casual Dining - Western</label>
                </value>
                <value>
                    <fullName>Central Kitchen</fullName>
                    <isActive>false</isActive>
                    <label>Central Kitchen</label>
                </value>
                <value>
                    <fullName>Coffee/Tea OEM</fullName>
                    <isActive>false</isActive>
                    <label>Coffee/Tea OEM</label>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                    <isActive>false</isActive>
                    <label>Convenience Store</label>
                </value>
                <value>
                    <fullName>Core Bakery</fullName>
                    <isActive>false</isActive>
                    <label>Core Bakery</label>
                </value>
                <value>
                    <fullName>Core Coffee Shop</fullName>
                    <isActive>false</isActive>
                    <label>Core Coffee Shop</label>
                </value>
                <value>
                    <fullName>Core Ice cream</fullName>
                    <isActive>false</isActive>
                    <label>Core Ice cream</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Chain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Account_Competitors__c</fullName>
        <label>Account Competitors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Currency__c</fullName>
        <label>Account Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Customer_Group__c</fullName>
        <label>Account Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Hotels</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Restaurants</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Pastry/Bakery/Ice cr</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>International Chain</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Local Chain</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Department Stores</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Expat Stores</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>Convenient stores</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Distributor Retail</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Distributor Corporat</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Wholesale Market</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Employee</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Internet sales</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Personal sales</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Distributor Food Ser</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Supply Chain</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Food Logistic Servic</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Supply Chain and Foo</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Key Account</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Distributor Retail &amp;</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Gourmet Shop</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>FS1</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>FS2</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>FS3</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>DEPARTMENT STORES &amp;</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Catering</label>
                </value>
                <value>
                    <fullName>BAPA</fullName>
                    <isActive>false</isActive>
                    <label>BAPA</label>
                </value>
                <value>
                    <fullName>Coffee/Tea Shop</fullName>
                    <isActive>false</isActive>
                    <label>Coffee/Tea Shop</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <isActive>false</isActive>
                    <label>EC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Customer_Journey__c</fullName>
        <label>Account Customer Journey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Customer_Type__c</fullName>
        <label>Account Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <default>true</default>
                    <label>0001-Sold to party</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Goods Receipt</label>
                </value>
                <value>
                    <fullName>CPDA</fullName>
                    <label>CPDA-Onetime Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Delivery_Plant__c</fullName>
        <label>Delivery Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P011</fullName>
                    <label>P011-SINODIS ShangHai External-西诺迪斯（上海） 外部</label>
                </value>
                <value>
                    <fullName>P020</fullName>
                    <label>P020-SINODIS BeiJing-西诺迪斯（北京）</label>
                </value>
                <value>
                    <fullName>P040</fullName>
                    <label>P040-SINODIS GuangZhou-西诺迪斯（广州）</label>
                </value>
                <value>
                    <fullName>P050</fullName>
                    <label>P050-SINODIS Chengdu-西诺迪斯（成都）</label>
                </value>
                <value>
                    <fullName>P060</fullName>
                    <label>P060-SINODIS Dalian-西诺迪斯（大连）</label>
                </value>
                <value>
                    <fullName>P010</fullName>
                    <isActive>false</isActive>
                    <label>P010-SINODIS ShangHai-西诺迪斯（上海）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Group Name</label>
        <referenceTo>CN_Group__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Invoice_Address_and_Phone__c</fullName>
        <label>Invoicing Address and Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VAT Invoice</fullName>
                </value>
                <value>
                    <fullName>General Invoice</fullName>
                </value>
                <value>
                    <fullName>Electronic General Invoice</fullName>
                </value>
                <value>
                    <fullName>Electronic VAT Invoice</fullName>
                </value>
                <value>
                    <fullName>No need invoice</fullName>
                    <isActive>false</isActive>
                    <label>No need invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Invoicing_Address_EN__c</fullName>
        <label>Delivery Address(EN)</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Invoicing_Name__c</fullName>
        <label>Invoicing Name (Bill to party)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Layer__c</fullName>
        <label>Account Layer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Layer 100</fullName>
                </value>
                <value>
                    <fullName>Layer 80</fullName>
                </value>
                <value>
                    <fullName>Layer 50</fullName>
                </value>
                <value>
                    <fullName>Layer 20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Level__c</fullName>
        <label>Account Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Head Quarter</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_License_Name_CN__c</fullName>
        <label>Account License Name(CN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_License_Name_EN__c</fullName>
        <label>Account License Name(EN)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Litigation_City__c</fullName>
        <label>Account Litigation City</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <errorMessage>The Account should be Approved and Synchronized.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Update Account Request, Update Contact Request, New Contact Request, Update Ship-to Request, New Ship-to Request</value>
            </filterItems>
            <filterItems>
                <field>Account.CN_Account_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Account.CN_Synchronized__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Update Account Request, Update Contact Request, New Contact Request, Update Ship-to Request, New Ship-to Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Number_Of_Stores__c</fullName>
        <label>Account Number of stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests_Account_Onwer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Payment_Bank_Account__c</fullName>
        <label>Payment Bank Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Payment_Bank_Name__c</fullName>
        <label>Payment Bank Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Payment_Name__c</fullName>
        <label>Payment Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Payment_Terms__c</fullName>
        <label>Account Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                    <label>CIA-Payment in advance</label>
                </value>
                <value>
                    <fullName>D000</fullName>
                    <label>D000-Cash on delivery</label>
                </value>
                <value>
                    <fullName>D003</fullName>
                    <label>D003-Pay immediately with Invoice</label>
                </value>
                <value>
                    <fullName>D005</fullName>
                    <label>D005-D05/5 days after delivery</label>
                </value>
                <value>
                    <fullName>D010</fullName>
                    <label>D010-D10/10 days after delivery</label>
                </value>
                <value>
                    <fullName>D015</fullName>
                    <label>D015-15 days after delivery</label>
                </value>
                <value>
                    <fullName>D020</fullName>
                    <label>D020-20 days, due net</label>
                </value>
                <value>
                    <fullName>D030</fullName>
                    <label>D030-30 days, due net</label>
                </value>
                <value>
                    <fullName>D045</fullName>
                    <label>D045-45 days, due net</label>
                </value>
                <value>
                    <fullName>D060</fullName>
                    <label>D060-60days, due net</label>
                </value>
                <value>
                    <fullName>D090</fullName>
                    <label>D090-90days, due net</label>
                </value>
                <value>
                    <fullName>D120</fullName>
                    <label>D120-120 days, due net</label>
                </value>
                <value>
                    <fullName>M110</fullName>
                    <label>M110-10 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M115</fullName>
                    <label>M115-15 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M120</fullName>
                    <label>M120-20 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M131</fullName>
                    <label>M131-30 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M145</fullName>
                    <label>M145-Before 15th in 2 months, due net</label>
                </value>
                <value>
                    <fullName>M231</fullName>
                    <label>M231-60 days end of month, due net</label>
                </value>
                <value>
                    <fullName>D007</fullName>
                </value>
                <value>
                    <fullName>M031</fullName>
                </value>
                <value>
                    <fullName>M23</fullName>
                    <label>M23-60 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M331</fullName>
                    <isActive>false</isActive>
                    <label>M331-90 days end of month, due net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>QR Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Post_Code__c</fullName>
        <label>Post Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Potential_Volume_Chance__c</fullName>
        <label>Potential Volume(Sinodis chance)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Account_Potential_Volume_Market__c</fullName>
        <label>Account Potential Volume(market)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Account_Reconciliation_Account__c</fullName>
        <label>Account Reconciliation Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11410101</fullName>
                    <label>11410101-Account Receivable - domestic</label>
                </value>
                <value>
                    <fullName>11410103</fullName>
                    <label>11410103-Account Receivable - domestic - Legal Cases</label>
                </value>
                <value>
                    <fullName>11410104</fullName>
                    <label>11410104-Account Receivable - domestic - Dispute/Deduction</label>
                </value>
                <value>
                    <fullName>11410201</fullName>
                    <label>11410201-Accounts Receivable - foreign</label>
                </value>
                <value>
                    <fullName>11910000</fullName>
                    <label>11910000-Other Accounts Receivable domestic</label>
                </value>
                <value>
                    <fullName>11910001</fullName>
                    <label>11910001-Other Accounts Receivable Custom duties</label>
                </value>
                <value>
                    <fullName>11910010</fullName>
                    <label>11910010-Other Accounts Receivable - Inter Company</label>
                </value>
                <value>
                    <fullName>11910020</fullName>
                    <label>11910020-Other Accounts Receivable - Foreign suppliers (3rd</label>
                </value>
                <value>
                    <fullName>11910040</fullName>
                    <label>11910040-Other Accounts Receivable - Security deposit</label>
                </value>
                <value>
                    <fullName>11910050</fullName>
                    <label>11910050-Other Accounts Receivable Others</label>
                </value>
                <value>
                    <fullName>11910085</fullName>
                    <label>11910085-Other Receivable - MSH Pension Fund Balance</label>
                </value>
                <value>
                    <fullName>21610101</fullName>
                    <label>21610101-Advances from Customer   domestic</label>
                </value>
                <value>
                    <fullName>21610102</fullName>
                    <label>21610102-Security deposit given to Customers</label>
                </value>
                <value>
                    <fullName>21610103</fullName>
                    <label>21610103-Advances from Customer   domestic(Credit balance)</label>
                </value>
                <value>
                    <fullName>21610201</fullName>
                    <label>21610201-Advances from Customer   foreign</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Reference_Day__c</fullName>
        <label>Account Reference Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery_Day</fullName>
                    <label>Delivery Day</label>
                </value>
                <value>
                    <fullName>Fapiao_Day</fullName>
                    <label>Fapiao Day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Account_Require_Bank_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Require Bank Information/FaPiao</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Account_Require_Business_License__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Require Business License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Account_Require_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Account_Require_Hygiene_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Hygiene Certificate</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>